# ppx_blob

./: .gitignore  CHANGES.md  LICENSE.txt  META  Makefile  README.md  dune  dune-project  index.html  jbuild  opam  ppx_blob.ml  ppx_blob.opam  ppx_netblob.ml  test_file
.github/workflows/: main.yml
example/: Makefile  dune  quine.ml
integration-test/dune-lang-1/: Makefile  foo.opam
integration-test/dune-lang-1/src/: dune  foo.ml
integration-test/dune-lang-3/: foo.opam  root.inc
integration-test/dune-lang-3/etc/: hostname
integration-test/dune-lang-3/src/: foo.ml
integration-test/ocamlbuild/: Makefile  _tags  foo.opam
integration-test/ocamlbuild/src/: foo.ml  src.inc
integration-test/ocamlopt/: .gitignore  Makefile  foo.opam
integration-test/ocamlopt/src/: common.inc  foo.ml
ppx_blob/: index.html
ppx_blob/Ppx_blob/: index.html
src/: dune  jbuild  ppx_blob.ml
test/: common.inc  dune  jbuild  test.ml  test_file
test/subdir/: dune  sub.inc  test.ml  test_file
test/test/: common.inc
