opam-version: "1.2"
authors: "John Whitington"
maintainer: "contact@coherentgraphics.co.uk"
homepage: "https://github.com/johnwhitington/ppx_blob"
dev-repo: "https://github.com/johnwhitington/ppx_blob.git"
bug-reports: "https://github.com/johnwhitington/ppx_blob/issues/"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "ocaml-migrate-parsetree"
  "alcotest" {test}
]
