opam-version: "2.0"
authors: "John Whitington"
maintainer: "contact@coherentgraphics.co.uk"
homepage: "https://github.com/johnwhitington/ppx_blob"
dev-repo: "git+https://github.com/johnwhitington/ppx_blob.git"
bug-reports: "https://github.com/johnwhitington/ppx_blob/issues/"
doc: "https://johnwhitington.github.io/ppx_blob/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "dune" {>= "1.11"}
  "ppxlib"
  "alcotest" {with-test}
]
synopsis: "Include a file as a string at compile time"
description:
  "ppx_blob allows you to include a binary blob from a file as a string. Writing `[%blob \"filename\"]` will replace the string with the contents of the file at compile time. This allows the inclusion of arbitary, possibly compressed, data, without the need to respect OCaml's lexical conventions."
